2001-06-17  Maciej Stachowiak  <mjs@noisehavoc.org>

	* components/tree/nautilus-tree-view.c (select_current_location):
	Fix bug 6801 (FIXME ... strcmp should be nautilus_uris_match).

2001-06-15  Fatih Demir <kabalak@gtranslator.org>

	* components/help/converters/gnome-db2html3/*: Added cvsignore
		files where needed.

2001-06-14  Marius Andreiana  <mandreiana@yahoo.com>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS

2001-06-11 John Fleck <jfleck@inkstain.net>

	* reviewed to Laszlo Kovacs <laszlo.kovacs@sun.com>
	* components/help/converters/gnome/db2html3/
	docbook/Makefile.am to include file VERSION in DocBook
	stylesheet

2001-06-11 John Fleck <jfleck@inkstain.net>

	* components/help/converters/gnome-db2html3/gnome-customization
	gnome-customization.xsl
	updating path to including docbook stylesheets

2001-06-11  Darin Adler  <darin@bentspoon.com>

	* configure.in: Updated version to 1.0.3.2 for the 1.0.4
	candidate build.

	* icons/gnome/Makefile.am: Added missing backslash character.
	Without it, many icons didn't get installed.

	* src/nautilus-application.c: (need_to_show_first_time_druid):
	Fix some code that was building a URL by sticking a file://
	onto the front of a file name. I just changed it to use the
	path directly and do a plain unlink instead of gnome_vfs_unlink.

	* src/nautilus-profiler.c:
	(nautilus_profiler_bonobo_ui_report_callback):
	Use gnome_vfs_get_uri_from_local_path instead of just sticking
	a file:// on the front of a path name.

2001-06-10 John Fleck <jfleck@inkstain.net>

	* components/help/converters/gnome-db2html3/Makefile.am:
	fix segfault caused by the fact that we were linking to both
	libxml1 and 2

2001-06-09  Dan Mueth  <d-mueth@uchicago.edu>

	Updated Nautilus User Manual for 1.0.4.

	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:

2001-06-09  Dan Mueth  <d-mueth@uchicago.edu>

	Fixing bug#8327.  (Thanks to John Fleck.)

	* help/nautilus-user-manual/es/nautilus-user-manual.sgml:
